[package]
name = "lints"
version = "0.1.0"
authors = ["i1i1"]
edition = "2018"
license = "MIT"
repository = "https://github.com/i1i1/clippy-lints"
readme = "README.md"
keywords = ["cmd", "lints", "clippy", "cargo", "cli"]
categories = ["cli", "lints", "cargo"]
description = "Utility for running lints specified from files"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
structopt = "0.3"
eyre = "0.6"
